// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task API  (E2E) > createTasks() and deleteTask() 1`] = `
{
  "boundingBox": null,
  "created": "created",
  "creationInfo": null,
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "datasetName": "confocal-multi_knossos",
  "editPosition": [
    1,
    2,
    3,
  ],
  "editRotation": [
    4,
    5,
    6,
  ],
  "id": "id",
  "neededExperience": {
    "domain": "abc",
    "value": 1,
  },
  "projectId": "58135bfd2faeb3190181c05a",
  "projectName": "Test_Project4",
  "script": null,
  "status": {
    "active": 0,
    "finished": 0,
    "pending": 3,
  },
  "team": "team_X1",
  "tracingTime": "tracingTime",
  "type": {
    "description": "Check those cells out!",
    "id": "id",
    "recommendedConfiguration": null,
    "settings": {
      "allowedModes": [
        "orthogonal",
        "oblique",
        "flight",
      ],
      "branchPointsAllowed": true,
      "magRestrictions": {},
      "mergerMode": false,
      "somaClickingAllowed": true,
      "volumeInterpolationAllowed": false,
    },
    "summary": "ek_0563_BipolarCells",
    "teamId": "570b9f4b2a7c0e3b008da6ec",
    "teamName": "team_X1",
    "tracingType": "skeleton",
  },
}
`;

exports[`Task API  (E2E) > getAnnotationsForTask() 1`] = `
[
  {
    "annotationLayers": [
      {
        "name": "Skeleton",
        "stats": {},
        "tracingId": "07fd0bd7-f7a6-46d1-aaa8-58a381da4d50",
        "typ": "Skeleton",
      },
    ],
    "contributors": [],
    "dataSetName": "2012-06-28_Cortex",
    "dataStore": {
      "allowsUpload": true,
      "jobsEnabled": false,
      "jobsSupportedByAvailableWorkers": [],
      "name": "localhost",
      "url": "http://localhost:9000",
    },
    "datasetId": "570b9f4e4bb848d0885ee711",
    "description": "",
    "id": "58135c402faeb34e0081c068",
    "isLockedByOwner": false,
    "modified": 0,
    "name": "",
    "organization": "Organization_X",
    "othersMayEdit": false,
    "owner": {
      "email": "user_A@scalableminds.com",
      "firstName": "user_A",
      "id": "570b9f4d2a7c0e4d008da6ef",
      "isAdmin": true,
      "isAnonymous": false,
      "isDatasetManager": true,
      "lastName": "last_A",
      "teams": [
        {
          "id": "570b9f4b2a7c0e3b008da6ec",
          "isTeamManager": true,
          "name": "team_X1",
        },
        {
          "id": "59882b370d889b84020efd3f",
          "isTeamManager": false,
          "name": "team_X3",
        },
        {
          "id": "59882b370d889b84020efd6f",
          "isTeamManager": true,
          "name": "team_X4",
        },
      ],
    },
    "restrictions": {
      "allowAccess": true,
      "allowDownload": true,
      "allowFinish": true,
      "allowUpdate": true,
    },
    "settings": {
      "allowedModes": [
        "orthogonal",
        "oblique",
        "flight",
      ],
      "branchPointsAllowed": true,
      "magRestrictions": {},
      "mergerMode": false,
      "somaClickingAllowed": true,
      "volumeInterpolationAllowed": false,
    },
    "state": "Active",
    "stats": {},
    "tags": [
      "2012-06-28_Cortex",
      "skeleton",
    ],
    "task": {
      "boundingBox": null,
      "created": 1477666728000,
      "creationInfo": null,
      "datasetId": "570b9f4e4bb848d0885ee711",
      "datasetName": "2012-06-28_Cortex",
      "editPosition": [
        0,
        0,
        0,
      ],
      "editRotation": [
        0,
        0,
        0,
      ],
      "id": "581367a82faeb37a008a5352",
      "neededExperience": {
        "domain": "abc",
        "value": 0,
      },
      "projectId": "58135bfd2faeb3190181c057",
      "projectName": "Test_Project",
      "script": null,
      "status": {
        "active": 1,
        "finished": -1,
        "pending": 10,
      },
      "team": "team_X1",
      "tracingTime": null,
      "type": {
        "description": "Check those cells out!",
        "id": "570b9f4c2a7c0e4c008da6ee",
        "recommendedConfiguration": null,
        "settings": {
          "allowedModes": [
            "orthogonal",
            "oblique",
            "flight",
          ],
          "branchPointsAllowed": true,
          "magRestrictions": {},
          "mergerMode": false,
          "somaClickingAllowed": true,
          "volumeInterpolationAllowed": false,
        },
        "summary": "ek_0563_BipolarCells",
        "teamId": "570b9f4b2a7c0e3b008da6ec",
        "teamName": "team_X1",
        "tracingType": "skeleton",
      },
    },
    "teams": [],
    "tracingStore": {
      "name": "localhost",
      "url": "http://localhost:9000",
    },
    "tracingTime": null,
    "typ": "Task",
    "user": {
      "email": "user_A@scalableminds.com",
      "firstName": "user_A",
      "id": "570b9f4d2a7c0e4d008da6ef",
      "isAdmin": true,
      "isAnonymous": false,
      "isDatasetManager": true,
      "lastName": "last_A",
      "teams": [
        {
          "id": "570b9f4b2a7c0e3b008da6ec",
          "isTeamManager": true,
          "name": "team_X1",
        },
        {
          "id": "59882b370d889b84020efd3f",
          "isTeamManager": false,
          "name": "team_X3",
        },
        {
          "id": "59882b370d889b84020efd6f",
          "isTeamManager": true,
          "name": "team_X4",
        },
      ],
    },
    "viewConfiguration": null,
    "visibility": "Internal",
  },
]
`;

exports[`Task API  (E2E) > getTask() 1`] = `
{
  "boundingBox": null,
  "boundingBoxVec6": undefined,
  "created": 1477663769000,
  "creationInfo": null,
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "datasetName": "confocal-multi_knossos",
  "editPosition": [
    0,
    0,
    0,
  ],
  "editRotation": [
    0,
    0,
    0,
  ],
  "id": "58135c192faeb34c0081c058",
  "neededExperience": {
    "domain": "abc",
    "value": 0,
  },
  "projectId": "58135bfd2faeb3190181c057",
  "projectName": "Test_Project",
  "script": null,
  "status": {
    "active": 0,
    "finished": 1,
    "pending": 9,
  },
  "team": "team_X1",
  "tracingTime": 0,
  "type": {
    "description": "Check those cells out!",
    "id": "570b9f4c2a7c0e4c008da6ee",
    "recommendedConfiguration": null,
    "settings": {
      "allowedModes": [
        "orthogonal",
        "oblique",
        "flight",
      ],
      "branchPointsAllowed": true,
      "magRestrictions": {},
      "mergerMode": false,
      "somaClickingAllowed": true,
      "volumeInterpolationAllowed": false,
    },
    "summary": "ek_0563_BipolarCells",
    "teamId": "570b9f4b2a7c0e3b008da6ec",
    "teamName": "team_X1",
    "tracingType": "skeleton",
  },
}
`;

exports[`Task API  (E2E) > getTasks() 1`] = `
[
  {
    "boundingBox": null,
    "boundingBoxVec6": undefined,
    "created": 1477663769000,
    "creationInfo": null,
    "datasetId": "59e9cfbdba632ac2ab8b23b3",
    "datasetName": "confocal-multi_knossos",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "58135c192faeb34c0081c058",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "58135bfd2faeb3190181c057",
    "projectName": "Test_Project",
    "script": null,
    "status": {
      "active": 0,
      "finished": 1,
      "pending": 9,
    },
    "team": "team_X1",
    "tracingTime": 0,
    "type": {
      "description": "Check those cells out!",
      "id": "570b9f4c2a7c0e4c008da6ee",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": false,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0563_BipolarCells",
      "teamId": "570b9f4b2a7c0e3b008da6ec",
      "teamName": "team_X1",
      "tracingType": "skeleton",
    },
  },
  {
    "boundingBox": null,
    "boundingBoxVec6": undefined,
    "created": 1477666728000,
    "creationInfo": null,
    "datasetId": "570b9f4e4bb848d0885ee711",
    "datasetName": "2012-06-28_Cortex",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "581367a82faeb37a008a5352",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "58135bfd2faeb3190181c057",
    "projectName": "Test_Project",
    "script": null,
    "status": {
      "active": 1,
      "finished": -1,
      "pending": 10,
    },
    "team": "team_X1",
    "tracingTime": 0,
    "type": {
      "description": "Check those cells out!",
      "id": "570b9f4c2a7c0e4c008da6ee",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": false,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0563_BipolarCells",
      "teamId": "570b9f4b2a7c0e3b008da6ec",
      "teamName": "team_X1",
      "tracingType": "skeleton",
    },
  },
  {
    "boundingBox": null,
    "boundingBoxVec6": undefined,
    "created": 1477666728000,
    "creationInfo": null,
    "datasetId": "570b9f4e4bb848d0885ee711",
    "datasetName": "2012-06-28_Cortex",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "581367a82faeb37a008a5354",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "68135bfd2faeb3190181c058",
    "projectName": "Test_Project2",
    "script": null,
    "status": {
      "active": 0,
      "finished": 0,
      "pending": 10,
    },
    "team": "team_X2",
    "tracingTime": 0,
    "type": {
      "description": "Check those cells out!",
      "id": "570b9f4c2a7c0e4c008da6ff",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": true,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0674_BipolarCells",
      "teamId": "69882b370d889b84020efd4f",
      "teamName": "team_X2",
      "tracingType": "skeleton",
    },
  },
]
`;

exports[`Task API  (E2E) > getTasks() 2`] = `
[
  {
    "boundingBox": null,
    "boundingBoxVec6": undefined,
    "created": 1477663769000,
    "creationInfo": null,
    "datasetId": "59e9cfbdba632ac2ab8b23b3",
    "datasetName": "confocal-multi_knossos",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "58135c192faeb34c0081c058",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "58135bfd2faeb3190181c057",
    "projectName": "Test_Project",
    "script": null,
    "status": {
      "active": 0,
      "finished": 1,
      "pending": 9,
    },
    "team": "team_X1",
    "tracingTime": 0,
    "type": {
      "description": "Check those cells out!",
      "id": "570b9f4c2a7c0e4c008da6ee",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": false,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0563_BipolarCells",
      "teamId": "570b9f4b2a7c0e3b008da6ec",
      "teamName": "team_X1",
      "tracingType": "skeleton",
    },
  },
  {
    "boundingBox": null,
    "boundingBoxVec6": undefined,
    "created": 1477666728000,
    "creationInfo": null,
    "datasetId": "570b9f4e4bb848d0885ee711",
    "datasetName": "2012-06-28_Cortex",
    "editPosition": [
      0,
      0,
      0,
    ],
    "editRotation": [
      0,
      0,
      0,
    ],
    "id": "581367a82faeb37a008a5352",
    "neededExperience": {
      "domain": "abc",
      "value": 0,
    },
    "projectId": "58135bfd2faeb3190181c057",
    "projectName": "Test_Project",
    "script": null,
    "status": {
      "active": 1,
      "finished": -1,
      "pending": 10,
    },
    "team": "team_X1",
    "tracingTime": 0,
    "type": {
      "description": "Check those cells out!",
      "id": "570b9f4c2a7c0e4c008da6ee",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": false,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0563_BipolarCells",
      "teamId": "570b9f4b2a7c0e3b008da6ec",
      "teamName": "team_X1",
      "tracingType": "skeleton",
    },
  },
]
`;

exports[`Task API  (E2E) > peekNextTasks() 1`] = `
{
  "boundingBox": null,
  "created": 1477663769000,
  "creationInfo": null,
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "datasetName": "confocal-multi_knossos",
  "editPosition": [
    0,
    0,
    0,
  ],
  "editRotation": [
    0,
    0,
    0,
  ],
  "id": "58135c192faeb34c0081c058",
  "neededExperience": {
    "domain": "abc",
    "value": 0,
  },
  "projectId": "58135bfd2faeb3190181c057",
  "projectName": "Test_Project",
  "script": null,
  "status": {
    "active": 0,
    "finished": 1,
    "pending": 9,
  },
  "team": "team_X1",
  "tracingTime": null,
  "type": {
    "description": "Check those cells out!",
    "id": "570b9f4c2a7c0e4c008da6ee",
    "recommendedConfiguration": null,
    "settings": {
      "allowedModes": [
        "orthogonal",
        "oblique",
        "flight",
      ],
      "branchPointsAllowed": true,
      "magRestrictions": {},
      "mergerMode": false,
      "somaClickingAllowed": true,
      "volumeInterpolationAllowed": false,
    },
    "summary": "ek_0563_BipolarCells",
    "teamId": "570b9f4b2a7c0e3b008da6ec",
    "teamName": "team_X1",
    "tracingType": "skeleton",
  },
}
`;

exports[`Task API  (E2E) > requestTask() 1`] = `
{
  "annotationLayers": [
    {
      "name": "Skeleton",
      "stats": {},
      "tracingId": "tracingId",
      "typ": "Skeleton",
    },
  ],
  "contributors": [],
  "dataSetName": "confocal-multi_knossos",
  "dataStore": {
    "allowsUpload": true,
    "jobsEnabled": false,
    "jobsSupportedByAvailableWorkers": [],
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "description": "",
  "id": "id",
  "isLockedByOwner": false,
  "modified": "modified",
  "name": "",
  "organization": "Organization_X",
  "othersMayEdit": false,
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "restrictions": {
    "allowAccess": true,
    "allowDownload": true,
    "allowFinish": true,
    "allowUpdate": true,
  },
  "settings": {
    "allowedModes": [
      "orthogonal",
      "oblique",
      "flight",
    ],
    "branchPointsAllowed": true,
    "magRestrictions": {},
    "mergerMode": false,
    "somaClickingAllowed": true,
    "volumeInterpolationAllowed": false,
  },
  "state": "Active",
  "stats": {},
  "tags": [
    "confocal-multi_knossos",
    "skeleton",
  ],
  "task": {
    "boundingBox": null,
    "created": "created",
    "creationInfo": null,
    "datasetId": "59e9cfbdba632ac2ab8b23b3",
    "datasetName": "confocal-multi_knossos",
    "editPosition": [
      1,
      2,
      3,
    ],
    "editRotation": [
      4,
      5,
      6,
    ],
    "id": "id",
    "neededExperience": {
      "domain": "abc",
      "value": 1,
    },
    "projectId": "58135bfd2faeb3190181c05a",
    "projectName": "Test_Project4",
    "script": null,
    "status": {
      "active": 1,
      "finished": 0,
      "pending": 2,
    },
    "team": "team_X1",
    "tracingTime": "tracingTime",
    "type": {
      "description": "Check those cells out!",
      "id": "id",
      "recommendedConfiguration": null,
      "settings": {
        "allowedModes": [
          "orthogonal",
          "oblique",
          "flight",
        ],
        "branchPointsAllowed": true,
        "magRestrictions": {},
        "mergerMode": false,
        "somaClickingAllowed": true,
        "volumeInterpolationAllowed": false,
      },
      "summary": "ek_0563_BipolarCells",
      "teamId": "570b9f4b2a7c0e3b008da6ec",
      "teamName": "team_X1",
      "tracingType": "skeleton",
    },
  },
  "teams": [],
  "tracingStore": {
    "name": "localhost",
    "url": "http://localhost:9000",
  },
  "tracingTime": "tracingTime",
  "typ": "Task",
  "user": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "id",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "id",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "id",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
  "viewConfiguration": null,
  "visibility": "Internal",
}
`;

exports[`Task API  (E2E) > updateTask() 1`] = `
{
  "boundingBox": null,
  "boundingBoxVec6": undefined,
  "created": 1477663769000,
  "creationInfo": null,
  "datasetId": "59e9cfbdba632ac2ab8b23b3",
  "datasetName": "confocal-multi_knossos",
  "editPosition": [
    0,
    0,
    0,
  ],
  "editRotation": [
    0,
    0,
    0,
  ],
  "id": "58135c192faeb34c0081c058",
  "messages": [
    {
      "success": "Task successfully edited",
    },
  ],
  "neededExperience": {
    "domain": "abc",
    "value": 0,
  },
  "projectId": "58135bfd2faeb3190181c057",
  "projectName": "Test_Project",
  "script": null,
  "status": {
    "active": 0,
    "finished": 1,
    "pending": 19,
  },
  "team": "team_X1",
  "tracingTime": 0,
  "type": {
    "description": "Check those cells out!",
    "id": "570b9f4c2a7c0e4c008da6ee",
    "recommendedConfiguration": null,
    "settings": {
      "allowedModes": [
        "orthogonal",
        "oblique",
        "flight",
      ],
      "branchPointsAllowed": true,
      "magRestrictions": {},
      "mergerMode": false,
      "somaClickingAllowed": true,
      "volumeInterpolationAllowed": false,
    },
    "summary": "ek_0563_BipolarCells",
    "teamId": "570b9f4b2a7c0e3b008da6ec",
    "teamName": "team_X1",
    "tracingType": "skeleton",
  },
}
`;
